fix problem with connection and ajouter table overlapping accueil

--- a/accueil.css
+++ b/accueil.css
@@ -149,7 +149,7 @@ width: 1%;
 
 
 
-table {
+/*table {
 	width: 200px;
 	float: right;
 	margin: 20px 40px;
@@ -158,4 +158,4 @@ table {
 table, th, td {
 	border: 1px solid black;
 	border-collapse: collapse;
-}
+}*/
